fix: DSI compliance - remove hardcoded secrets, fix CI/CD pipeline